# 3g

./: Cargo.toml  GEMINI.md  README.md
src/: auth.rs  ipc.rs  lib.rs  main.rs
src/commands/: add.rs  blame.rs  branch.rs  cherry_pick.rs  clone.rs  commit.rs  diff.rs  log.rs  merge.rs  mod.rs  pull.rs  push.rs  reset.rs  revert.rs  show.rs  stash.rs  status.rs  tag.rs
