[package]
name = "three-g"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "3g"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
git2 = "0.20.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[[bin]]
name = "3g-daemon"
path = "src/bin/daemon.rs"
